Update index.html file

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Have a nice day!!</p>
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/jigarmistry" class="avatar"><img src="https://avatars2.githubusercontent.com/u/5270211?v=2&amp;s=60" width="48" height="48"></a> <a href="https://github.com/jigarmistry">jigarmistry</a> maintains <a href="https://github.com/jigarmistry/new">Github Practice</a></p>
+      <p><a href="https://github.com/jigarmistry" class="avatar"><img src="https://avatars2.githubusercontent.com/u/5270211?v=2&amp;s=60" width="48" height="48"></a> <a href="https://github.com/jigarmistry">Jigar Mistry</a> maintains <a href="https://github.com/jigarmistry/new">Github Practice</a></p>
 
 
       </div>
